# napari-nifti

./: README.md  run_example.py  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_nifti/: __init__.py  _reader.py  _writer.py  napari.yaml
src/napari_nifti/_tests/: test_reader.py  test_writer.py
