[metadata]
name = napari-nifti
version = attr: napari_nifti.__version__
description = A napari plugin for reading and writing NIFTI files that have the extension .nii or .nii.gz.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MIC-DKFZ/napari-nifti
author = Karol Gotkowski
author_email = karol.gotkowski@dkfz.de
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/MIC-DKFZ/napari-nifti/issues
    Documentation = https://github.com/MIC-DKFZ/napari-nifti#README.md
    Source Code = https://github.com/MIC-DKFZ/napari-nifti
    User Support = https://github.com/MIC-DKFZ/napari-nifti/issues

[options]
packages = find:
install_requires =
    medvol

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-nifti = napari_nifti:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
